添加图片批量操作
