# docs/swagger.yaml
@@ -1258,6 +1258,26 @@ paths:
       tags:
       - 评论
   /api/v1/images:
+    delete:
+      consumes:
+      - application/json
+      parameters:
+      - description: ids
+        in: query
+        name: ids
+        required: true
+        type: string
+      responses:
+        "100":
+          description: Continue
+          schema:
+            $ref: '#/definitions/utils.Result'
+        "104":
+          schema:
+            $ref: '#/definitions/utils.Result'
+      summary: 批量删除图片
+      tags:
+      - 图床
     get:
       consumes:
       - application/json
